--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- menu -->
     <ul>
       <li><a href="index.html">HOME</a></li>
-      <li><a href="blog.html">BLOGS</a></li>
-      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="pages/blog.html">BLOGS</a></li>
+      <li><a href="pages/about.html">ABOUT</a></li>
     </ul>
 
     <!-- main content section -->
@@ -28,7 +28,7 @@
       </div>
 
       <!-- blog list section -->
-      <a href="voluptatum.html">
+      <a href="pages/voluptatum.html">
         <div class="cards">
             <article class="card">
               <img src="css/images/macaron.jpeg" alt="macaron" />
@@ -44,7 +44,7 @@
             </article>
       </a>
 
-      <a href="accusamus.html">
+      <a href="pages/accusamus.html">
         <article class="card">
           <img src="css/images/macaron.jpeg" alt="macaron" />
           <header>
