--- a/pages/about.html
+++ b/pages/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>HaNguyen Blog</title>
   </head>
   <body>
     <!-- menu -->
     <ul>
-      <li><a href="index.html">HOME</a></li>
+      <li><a href="../index.html">HOME</a></li>
       <li><a href="blog.html">BLOGS</a></li>
       <li><a href="about.html">ABOUT</a></li>
     </ul>
