--- a/pages/accusamus.html
+++ b/pages/accusamus.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
-    /> -->
 
     <title>HaNguyen Blog</title>
   </head>
   <body>
     <!-- menu -->
     <ul>
-      <li><a href="index.html">HOME</a></li>
+      <li><a href="../index.html">HOME</a></li>
       <li><a href="blog.html">BLOGS</a></li>
       <li><a href="about.html">ABOUT</a></li>
     </ul>
@@ -26,7 +22,7 @@
 
       <div class="cards">
         <article class="card">
-          <img src="css/images/macaron.jpeg" alt="macaron" />
+          <img src="../css/images/macaron.jpeg" alt="macaron" />
           <header>
             <h3>Accusamus</h3>
           </header>
