updates on home path and css path

--- a/pages/voluptatum.html
+++ b/pages/voluptatum.html
@@ -15,7 +15,7 @@
   <body>
     <!-- menu -->
     <ul>
-      <li><a href="index.html">HOME</a></li>
+      <li><a href="../index.html">HOME</a></li>
       <li><a href="blog.html">BLOGS</a></li>
       <li><a href="about.html">ABOUT</a></li>
     </ul>
@@ -26,7 +26,7 @@
 
       <div class="cards">
         <article class="card">
-          <img src="css/images/macaron.jpeg" alt="macaron" />
+          <img src="../css/images/macaron.jpeg" alt="macaron" />
           <header>
             <h3>Voluptatum</h3>
           </header>
